@@ -193,7 +193,7 @@ $supported_databases = array(
     'mssql'   => array('5.2.0', 'MS SQL Server 2005 / 2008'),
     'mysqli'  => array('5.2.0', 'MySQL 5.x (ext/mysqli)'),
     'sqlite'  => array('5.2.0', 'SQLite'),
-    'sqlite3' => array('5.3.0', 'SQLite 3 (only PHP 5.3+)'),
+    'sqlite3' => array('5.3.0', 'SQLite 3 (only PHP 5.3+, experimental)'),
     'ibm_db2' => array('5.2.0', 'IBM DB2 Universal Database 8.2 / 9.1'),
     'sqlsrv'  => array('5.2.0', 'SQL Server Driver for PHP (experimental)'),
     'ibase'   => array('5.2.0', 'Interbase/Firebird (experimental)'),
