@@ -6,6 +6,7 @@ CHANGELOG
 This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.7.5 - 2012-03-
+- added experimental support for SQLite3 (Thorsten)
 - fixed Slovak translation (Thorsten)
 - fixed some bugs (Thorsten)
 
